rust/tests/macro_err/starts_punct.stderr
error: expected identifier
 --> tests/macro_err/starts_punct.rs:3:21
  |
3 |     tindalwic_json!(+ then more)
  |                     ^
